Adicionando novas Sessões

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
        
         <nav class="nav">
             <ul class="menu">
-                <li class="menu-itens">Inicio</li>
-                <li class="menu-itens">Happy Hour</li>
-                <li class="menu-itens">Cardapio</li>
-                <li class="menu-itens">Galeria</li>
-                <li class="menu-itens">O Boteko</li>
+                <li class="menu-itens"><a href="#">Inicio</a></li>
+                <li class="menu-itens"><a href="#">Happy Hour</a></li>
+                <li class="menu-itens"><a href="#">Cardapio</a></li>
+                <li class="menu-itens"><a href="#">Galeria</a></li>
+                <li class="menu-itens"><a href="#">O Boteko</a></li>
             </ul>
         </nav>
     </header>
@@ -35,10 +35,91 @@
         <article class="happy-hour">
             <h2 class="happy-hour-titulo">Happy Hour</h2>
             <p>Venha celebrar o fim de semana com muita música boa. Convide os amigos e se junte a nós. O Nosso Boteko garante um serviço de qualidade e uma noite super agradável</p>
+            <img src="./img/copo-detalhe.png" alt="" class="copo-detahe">
             <div class="galeria-happy-hour">
                 <img src="./img/banda1.jpg" alt="banner">
                 <img src="./img/banda2.jpg" alt="banner">
                 <img src="./img/banda3.jpg" alt="banner">
+            </div>
+        </article>
+
+        <article class="cardapio">
+
+            <h2 class="cardapio-titulo">Cardápio</h2>
+
+            <img src="./img/copo-detalhe-invertido.png" alt="" class="copo-detalhe-invertido">
+
+            <div class="menu-cardapio">
+                <a href="/">
+                    <span>Petiscos</span>
+                    <img src="./img/petiscos.png" alt="" class="img-menu-cardapio">
+                </a>
+                <a href="/">
+                    <span>Bebidas</span>
+                    <img src="./img/bebidas.png" alt="" class="img-menu-cardapio">
+                </a>
+                <a href="/">
+                    <span>Self-Service</span>
+                    <img src="./img/self-service.png" alt="" class="img-menu-cardapio ajuste-img">
+                </a>
+            </div>
+
+            <div class="modal-cardapio">
+                <div class="modal-petiscos">
+                    <h2>Petiscos</h2>
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+                </div>
+
+
+
             </div>
         </article>
     </main>
