Alterações na Sessão Cardápio

--- a/index.html
+++ b/index.html
@@ -50,25 +50,88 @@
             <img src="./img/copo-detalhe-invertido.png" alt="" class="copo-detalhe-invertido">
 
             <div class="menu-cardapio">
-                <a href="/">
-                    <span>Petiscos</span>
-                    <img src="./img/petiscos.png" alt="" class="img-menu-cardapio">
-                </a>
-                <a href="/">
-                    <span>Bebidas</span>
-                    <img src="./img/bebidas.png" alt="" class="img-menu-cardapio">
-                </a>
-                <a href="/">
-                    <span>Self-Service</span>
-                    <img src="./img/self-service.png" alt="" class="img-menu-cardapio ajuste-img">
-                </a>
+                <ul class="cardapio-itens">
+                   <li class="lista-cardapio">
+                        <img src="./img/petiscos.png" alt="" class="img-cardapio">
+                        <a href="">Petiscos</a>
+                   </li> 
+                   <li class="lista-cardapio">
+                        <img src="./img/bebidas.png" alt="" class="img-cardapio">
+                        <a href="">Bebidas</a>
+                   </li> 
+                   <li class="lista-cardapio">
+                        <img src="./img/self-service.png" alt="" class="img-cardapio">
+                        <a href="">Self-Service</a>
+                   </li> 
+                </ul>
             </div>
 
             <div class="modal-cardapio">
+           
                 <div class="modal-petiscos">
+
                     <h2>Petiscos</h2>
                     <div class="descricao">
                         <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+                </div>
+
+                <div class="modal-bedidas">
+
+                    <h2>Bebidas</h2>
+                    <div class="descricao">
+                        <h3 class="desc-produto">Cerveja</h3>
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
@@ -117,9 +180,6 @@
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
                 </div>
-
-
-
             </div>
         </article>
     </main>
