Ajustes na Sessão Cardápio

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <article class="happy-hour">
             <h2 class="happy-hour-titulo">Happy Hour</h2>
-            <p>Venha celebrar o fim de semana com muita música boa. Convide os amigos e se junte a nós. O Nosso Boteko garante um serviço de qualidade e uma noite super agradável</p>
+            <p>Venha celebrar o fim de semana com muita música boa. Convide os amigos e se junte a nós. O Nosso Boteko garante um serviço de qualidade e uma noite super agradável.</p>
             <img src="./img/copo-detalhe.png" alt="" class="copo-detahe">
             <div class="galeria-happy-hour">
                 <img src="./img/banda1.jpg" alt="banner">
@@ -47,7 +47,7 @@
 
             <h2 class="cardapio-titulo">Cardápio</h2>
 
-            <img src="./img/copo-detalhe-invertido.png" alt="" class="copo-detalhe-invertido">
+            <!-- <img src="./img/copo-detalhe-invertido.png" alt="" class="copo-detalhe-invertido"> -->
 
             <div class="menu-cardapio">
                 <ul class="cardapio-itens">
@@ -72,58 +72,62 @@
 
                     <h2>Petiscos</h2>
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <h3 class="desc-produto">batata frita com Bacon</h3>
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <h3 class="desc-produto">batata frita com Bacon</h3>
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <h3 class="desc-produto">batata frita com Bacon</h3>
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <h3 class="desc-produto">batata frita com Bacon</h3>
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <h3 class="desc-produto">batata frita com Bacon</h3>
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <h3 class="desc-produto">batata frita com Bacon</h3>
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <h3 class="desc-produto">batata frita com Bacon</h3>
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita</h3>
+                        <h3 class="desc-produto">batata frita</h3>
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com bacon</h3>
+                        <h3 class="desc-produto">batata frita com Bacon</h3>
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <h3 class="desc-produto">batata frita com Bacon</h3>
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
+                        <h3 class="desc-produto">batata frita com Bacon</h3>
                         <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="pedido">
+                        <a href="" class="btn-pedido">Faça seu Pedido</a>
                     </div>
                 </div>
 
@@ -132,52 +136,124 @@
                     <h2>Bebidas</h2>
                     <div class="descricao">
                         <h3 class="desc-produto">Cerveja</h3>
-                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                        <p class="desc-quantidade">Heineken 600ML - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
-                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                        <h3 class="desc-produto">Cerveja</h3>
+                        <p class="desc-quantidade">Heineken 600g - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
-                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                        <h3 class="desc-produto">Cerveja</h3>
+                        <p class="desc-quantidade">Heineken 600ML - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
-                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                        <h3 class="desc-produto">Cerveja</h3>
+                        <p class="desc-quantidade">Heineken 600ML - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
-                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                        <h3 class="desc-produto">Cerveja</h3>
+                        <p class="desc-quantidade">Heineken 600ML - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
-                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                        <h3 class="desc-produto">Cerveja</h3>
+                        <p class="desc-quantidade">Heineken 600ML - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
-                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                        <h3 class="desc-produto">Cerveja</h3>
+                        <p class="desc-quantidade">Heineken 600ML - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
-                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                        <h3 class="desc-produto">Cerveja</h3>
+                        <p class="desc-quantidade">Heineken 600ML - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
-                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                        <h3 class="desc-produto">Cerveja</h3>
+                        <p class="desc-quantidade">Heineken 600ML - <span class="desc-preco">R$ 12,00</span></p>
                     </div>
 
                     <div class="descricao">
-                        <h3 class="desc-produto">Batata frita com molho de queijo e bacon</h3>
-                        <p class="desc-quantidade">Porçao 300g - <span class="desc-preco">R$ 12,00</span></p>
+                        <h3 class="desc-produto">Cerveja</h3>
+                        <p class="desc-quantidade">Heineken 600ML - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Cerveja</h3>
+                        <p class="desc-quantidade">Heineken 600ML - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="pedido">
+                        <a href="" class="btn-pedido">Faça seu Pedido</a>
+                    </div>
+                </div>
+
+                <div class="modal-self-service">
+
+                    <h2>Self-Service</h2>
+                    <div class="descricao">
+                        <h3 class="desc-produto">Prato Feito</h3>
+                        <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Prato Feito</h3>
+                        <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Prato Feito</h3>
+                        <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Prato Feito</h3>
+                        <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Prato Feito</h3>
+                        <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Prato Feito</h3>
+                        <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Prato Feito</h3>
+                        <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Prato Feito</h3>
+                        <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Prato Feito</h3>
+                        <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Prato Feito</h3>
+                        <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="descricao">
+                        <h3 class="desc-produto">Prato Feito</h3>
+                        <p class="desc-quantidade">Arroz, Feijão, Salada, 2 Pedaços de Carne - <span class="desc-preco">R$ 12,00</span></p>
+                    </div>
+
+                    <div class="pedido">
+                        <a href="" class="btn-pedido">Faça seu Pedido</a>
                     </div>
                 </div>
             </div>
