Novas sessões: Sobre | Footer | Rodapé

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <nav class="nav">
             <ul class="menu">
                 <li class="menu-itens"><a href="#">Inicio</a></li>
-                <li class="menu-itens"><a href="#">Happy Hour</a></li>
-                <li class="menu-itens"><a href="#">Cardapio</a></li>
-                <li class="menu-itens"><a href="#">Galeria</a></li>
-                <li class="menu-itens"><a href="#">O Boteko</a></li>
+                <li class="menu-itens"><a href="#happy-hour">Happy Hour</a></li>
+                <li class="menu-itens"><a href="#cardapio">Cardapio</a></li>
+                <li class="menu-itens"><a href="#galeria">Galeria</a></li>
+                <li class="menu-itens"><a href="#boteco">O Boteko</a></li>
             </ul>
         </nav>
     </header>
@@ -32,7 +32,7 @@
             <h2>Marcas ou Patrocínio</h2>
         </section>
         
-        <article class="happy-hour">
+        <article class="happy-hour" id="happy-hour">
             <h2 class="happy-hour-titulo">Happy Hour</h2>
             <p>Venha celebrar o fim de semana com muita música boa. Convide os amigos e se junte a nós. O Nosso Boteko garante um serviço de qualidade e uma noite super agradável.</p>
             <img src="./img/copo-detalhe.png" alt="" class="copo-detahe">
@@ -43,7 +43,7 @@
             </div>
         </article>
 
-        <article class="cardapio">
+        <article class="cardapio" id="cardapio">
 
             <h2 class="cardapio-titulo">Cardápio</h2>
 
@@ -68,7 +68,7 @@
 
             <div class="modal-cardapio">
            
-                <div class="modal-petiscos">
+                <div class="modal-petiscos" id="petiscos">
 
                     <h2>Petiscos</h2>
                     <div class="descricao">
@@ -259,5 +259,10 @@
             </div>
         </article>
     </main>
+    <footer>
+
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
