--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         
         <section class="marcas">
             <h2>Marcas ou Patrocínio</h2>
+            <div class="patrocinios">
+                <img src="./img/logos-bebidas/amstel.png" alt="">
+                <img src="./img/logos-bebidas/budweiser.png" alt="">
+                <img src="./img/logos-bebidas/redbull.png" alt="">
+                <img src="./img/logos-bebidas/heineken.png" alt="">
+                <img src="./img/logos-bebidas/skol.png" alt="">
+                <img src="./img/logos-bebidas/smirnoff.png" alt="">
+            </div>
         </section>
         
         <article class="happy-hour" id="happy-hour">
@@ -37,9 +45,9 @@
             <p>Venha celebrar o fim de semana com muita música boa. Convide os amigos e se junte a nós. O Nosso Boteko garante um serviço de qualidade e uma noite super agradável.</p>
             <img src="./img/copo-detalhe.png" alt="" class="copo-detahe">
             <div class="galeria-happy-hour">
-                <img src="./img/banda1.jpg" alt="banner">
-                <img src="./img/banda2.jpg" alt="banner">
-                <img src="./img/banda3.jpg" alt="banner">
+                <img src="./img/cartazes-happy-hour/banda1.jpg" alt="banner">
+                <img src="./img/cartazes-happy-hour/banda2.jpg" alt="banner">
+                <img src="./img/cartazes-happy-hour/banda3.jpg" alt="banner">
             </div>
         </article>
 
@@ -257,6 +265,47 @@
                     </div>
                 </div>
             </div>
+        </article>
+
+        <section class="section-galeria">
+            <h2>Galeria</h2>
+            <div class="galeria">
+                <figure class="galeria-album">
+                    <img src="./img/galeria/mulheres-bar.jpg" alt="Imagem Pessoas" class="img-galeria">
+                </figure>
+
+                <figure class="galeria-album">
+                    <img src="./img/galeria/mulheres-bar.jpg" alt="Imagem Pessoas" class="img-galeria">
+                </figure>
+
+                <figure class="galeria-album">
+                    <img src="./img/galeria/mulheres-bar.jpg" alt="Imagem Pessoas" class="img-galeria">
+                </figure>
+
+                <figure class="galeria-album">
+                    <img src="./img/galeria/mulheres-bar.jpg" alt="Imagem Pessoas" class="img-galeria">
+                </figure>
+
+                <figure class="galeria-album">
+                    <img src="./img/galeria/mulheres-bar.jpg" alt="Imagem Pessoas" class="img-galeria">
+                </figure>
+
+                <figure class="galeria-album">
+                    <img src="./img/galeria/mulheres-bar.jpg" alt="Imagem Pessoas" class="img-galeria">
+                </figure>
+
+                <figure class="galeria-album">
+                    <img src="./img/galeria/mulheres-bar.jpg" alt="Imagem Pessoas" class="img-galeria">
+                </figure>
+
+                <figure class="galeria-album">
+                    <img src="./img/galeria/mulheres-bar.jpg" alt="Imagem Pessoas" class="img-galeria">
+                </figure>
+            </div>
+        </section>
+
+        <article class="sobre">
+            <h2>Sobre nós</h2>
         </article>
     </main>
     <footer>
