Adicionando sessão : sobre-nos

--- a/index.html
+++ b/index.html
@@ -305,11 +305,23 @@
         </section>
 
         <article class="sobre">
-            <h2>Sobre nós</h2>
+            <div class="sobre-nos-container">
+
+                <div class="sobre-nos-img">
+                    <img src="./img/chopp.jpg" alt="">
+                </div>
+                
+                <div class="sobre-nos">
+                    <h1>Nosso Boteko</h1>
+                    <h2>Sobre nós</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo dignissimos nisi, quo, minima iste beatae obcaecati ullam quas est quia maxime animi totam omnis eius odio modi, laudantium aliquid saepe.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo dignissimos nisi, quo, minima iste beatae obcaecati ullam quas est quia maxime animi totam omnis eius odio modi, laudantium aliquid saepe.</p>
+                </div>
+            </div>
         </article>
     </main>
     <footer>
-
+        
     </footer>
 
     <script src="script.js"></script>
