Adicionando JS no Cardápio

--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
                 <ul class="cardapio-itens">
                    <li class="lista-cardapio">
                         <img src="./img/petiscos.png" alt="" class="img-cardapio">
-                        <a href="">Petiscos</a>
+                        <a href="" class="js-tab-petisco">Petiscos</a>
                    </li> 
                    <li class="lista-cardapio">
                         <img src="./img/bebidas.png" alt="" class="img-cardapio">
-                        <a href="">Bebidas</a>
+                        <a href="" class="js-tab-bebidas">Bebidas</a>
                    </li> 
                    <li class="lista-cardapio">
                         <img src="./img/self-service.png" alt="" class="img-cardapio">
-                        <a href="">Self-Service</a>
-                   </li> 
+                        <a href="" class="js-tab-self-service">Self-Service</a>
+                   </li>
                 </ul>
             </div>
 
             <div class="modal-cardapio">
            
-                <div class="modal-petiscos" id="petiscos">
+                <div class="petiscos js-cardapio">
 
                     <h2>Petiscos</h2>
                     <div class="descricao">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
 
-                <div class="modal-bedidas">
+                <div class="bedidas js-cardapio">
 
                     <h2>Bebidas</h2>
                     <div class="descricao">
@@ -202,7 +202,7 @@
                     </div>
                 </div>
 
-                <div class="modal-self-service">
+                <div class="self-service js-cardapio" >
 
                     <h2>Self-Service</h2>
                     <div class="descricao">
