Adaptações para Media Queries (Responsividade)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="menu-itens"><a href="#happy-hour">Happy Hour</a></li>
                 <li class="menu-itens"><a href="#cardapio">Cardapio</a></li>
                 <li class="menu-itens"><a href="#galeria">Galeria</a></li>
-                <li class="menu-itens"><a href="#boteco">O Boteko</a></li>
+                <li class="menu-itens"><a href="#boteko">O Boteko</a></li>
             </ul>
         </nav>
     </header>
@@ -276,7 +276,7 @@
             </div>
         </article>
 
-        <section class="section-galeria">
+        <section class="section-galeria" id="galeria">
             <h2>Galeria</h2>
             <div class="galeria">
                 <figure class="galeria-album">
@@ -313,7 +313,7 @@
             </div>
         </section>
 
-        <article class="sobre">
+        <article class="sobre" id="boteko">
             <div class="sobre-nos-container">
 
                 <div class="sobre-nos-img">
@@ -330,6 +330,7 @@
         </article>
     </main>
     <footer class="footer">
+
         <div class="footer-informacoes">
 
             <figure class="logo">
@@ -342,19 +343,18 @@
             
             <div class="endereco">
                 <h2>Endereço</h2>
-                <p>Rua: Maria de Jesus da Silva</p>
-                <p>nº 159</p>
+                <p>- Rua: Maria de Jesus da Silva</p>
+                <p>- nº 159</p>
                 <!-- <p>Em frente aos Correios</p> -->
-                <p>Pedra Branca - Ce</p>
+                <p>- Pedra Branca - Ce</p>
                 <p></p>
             </div>
 
             <div class="horarios">
                 <h2>Funcionamento</h2>
-                <p>Rua: Maria de Jesus da Silva</p>
-                <p>nº 159</p>
-                <!-- <p>Em frente aos Correios</p> -->
-                <p>Pedra Branca - Ce</p>
+                <p>- Segunda á Quinta: das 8:00 ás 22:00</p>
+                <p>- Sexta á Domingo: das 8:00 ás 24:00</p>
+                <p>- Sexta á Domingo: das 8:00 ás 24:00</p>
             </div>
         </div>
 
@@ -362,8 +362,6 @@
             <span>Desenvolvido por:</span><a href="/">Primata-Code</a><img src="./img/primata.png" alt="Imagem Botão"></p>
         </div>
     </footer>
-
     <script src="script.js"></script>
-
 </body>
 </html>
