Ajustes de tamanho para mobile
Fontes, espaçamentos, melhor experiência para o usuário.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
                         <img src="./img/self-service.png" alt="" class="img-cardapio">
                         <a class="js-tab-self-service">Self-Service</a>
                    </li>
+                   <li class="lista-cardapio">
+                    <img src="./img/self-service.png" alt="" class="img-cardapio">
+                    <a class="js-tab-self-service">Extra</a>
+               </li>
                 </ul>
             </div>
 
