--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                    </li> 
                    <li class="lista-cardapio">
                         <img src="./img/self-service.png" alt="" class="img-cardapio">
-                        <a class="js-tab-self-service">Self-Service</a>
+                        <a class="js-tab-self-service prato-feito">Prato Feito</a>
                    </li>
-                   <li class="lista-cardapio">
-                    <img src="./img/self-service.png" alt="" class="img-cardapio">
-                    <a class="js-tab-self-service">Extra</a>
-               </li>
+                   <!-- <li class="lista-cardapio">
+                        <img src="./img/self-service.png" alt="" class="img-cardapio">
+                        <a class="js-tab-self-service">Extra</a>
+                   </li> -->
                 </ul>
             </div>
 
