--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </head>
 <body>
 
-    <header class="header">
+    <header class="header" id="header">
         <div>
             <img src="./img/logo.png" alt="Foto Logomarca" class="img-logo">
         </div>
        
-        <nav class="nav">
-            <ul class="menu">
+        <nav class="nav" id="nav">
+            <button id="btn-mobile">Menu</button>
+            <ul class="menu" id="menu">
                 <li class="menu-itens"><a href="#">Inicio</a></li>
                 <li class="menu-itens"><a href="#happy-hour">Happy Hour</a></li>
                 <li class="menu-itens"><a href="#cardapio">Cardapio</a></li>
