Ajustando slider banner bebidas

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
         <section class="marcas">
             <h2>Marcas ou Patrocínio</h2>
             <div class="patrocinios">
-                <img src="./img/logos-bebidas/amstel.png" alt="">
-                <img src="./img/logos-bebidas/budweiser.png" alt="">
-                <img src="./img/logos-bebidas/redbull.png" alt="">
-                <img src="./img/logos-bebidas/heineken.png" alt="">
-                <img src="./img/logos-bebidas/skol.png" alt="">
-                <img src="./img/logos-bebidas/smirnoff.png" alt="">
+                <div class="patrocinios-banner">
+                    <img class="selected" src="./img/logos-bebidas/amstel.png" alt="logo marca de bebidas">
+                    <img src="./img/logos-bebidas/budweiser.png" alt="logo marca de bebidas">
+                    <img src="./img/logos-bebidas/redbull.png" alt="logo marca de bebidas">
+                    <img src="./img/logos-bebidas/heineken.png" alt="logo marca de bebidas">
+                    <img src="./img/logos-bebidas/skol.png" alt="logo marca de bebidas">
+                    <img src="./img/logos-bebidas/smirnoff.png" alt="logo marca de bebidas">
+                </div>
             </div>
         </section>
         
