Slider Adicionado - JS

--- a/index.html
+++ b/index.html
@@ -33,13 +33,22 @@
         <section class="marcas">
             <h2>Marcas ou Patrocínio</h2>
             <div class="patrocinios">
-                <div class="patrocinios-banner">
-                    <img class="selected" src="./img/logos-bebidas/amstel.png" alt="logo marca de bebidas">
+                <div class="patrocinios-banner selected-banner" >
+                    <img src="./img/logos-bebidas/amstel.png" alt="logo marca de bebidas">
                     <img src="./img/logos-bebidas/budweiser.png" alt="logo marca de bebidas">
                     <img src="./img/logos-bebidas/redbull.png" alt="logo marca de bebidas">
                     <img src="./img/logos-bebidas/heineken.png" alt="logo marca de bebidas">
                     <img src="./img/logos-bebidas/skol.png" alt="logo marca de bebidas">
                     <img src="./img/logos-bebidas/smirnoff.png" alt="logo marca de bebidas">
+                </div>
+
+                <div class="patrocinios-banner">
+                    <img src="./img/logos-bebidas/brahma.png" alt="logo marca de bebidas">
+                    <img src="./img/logos-bebidas/fanta.png" alt="logo marca de bebidas">
+                    <img src="./img/logos-bebidas/estella.png" alt="logo marca de bebidas">
+                    <img src="./img/logos-bebidas/antartica.png" alt="logo marca de bebidas">
+                    <img src="./img/logos-bebidas/smirnoff2.png" alt="logo marca de bebidas">
+                    <img src="./img/logos-bebidas/Kaiser.png" alt="logo marca de bebidas">
                 </div>
             </div>
         </section>
